Start project-detail

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,3 +1,5 @@
-<p>
-  project-detail works!
-</p>
+<div class="">
+  <h2>{{projectToDisplay?.title}}</h2>
+  <img src="projectToDisplay?.image" alt="projectToDisplay?.title" />
+  <p>{{projectToDisplay?.description}}</p>
+</div>
