--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,3 +1,9 @@
-<p>
-  side-bar works!
-</p>
+<div class="">
+  <img src="project.owner.userImage" alt="project.owner.name" />
+  <h5>{{project.owner.name}}</h5>
+</div>
+<div class="">
+  <div *ngFor="let sm of project.socialMedia" class="social-media">
+    <p><span>{{sm.mediaType}}</span>{{sm.mediaAddress}}</p>
+  </div>
+</div>
