--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -4,5 +4,5 @@
   <p>{{projectToDisplay?.description}}</p>
 </div>
 <div class="col-md-4">
-  <app-side-bar [projectToDisplay]="project"></app-side-bar>
+  <!-- <app-side-bar [projectToDisplay]="project"></app-side-bar> -->
 </div>
