--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-8">
   <h2>{{projectToDisplay?.title}}</h2>
-  <img src="projectToDisplay?.image" alt="projectToDisplay?.title" />
-  <p>{{projectToDisplay?.description}}</p>
+  <img [src]="projectToDisplay?.image" alt="projectToDisplay?.title" />
+  <p [innerHTML]="projectToDisplay?.description"></p>
 </div>
 <div class="col-md-4">
   <!-- <app-side-bar [projectToDisplay]="project"></app-side-bar> -->
