--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#" (click)= "showSignup=true">Signup</a></li>
       <li><a routerLink="login">Login</a></li>
+      <li><a routerLink="new-project">New Project</a></li>
       <li><a routerLink="about">About</a></li>
       <a class="navbar-brand" routerLink="contact">Contact Us</a>
 
