--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -9,11 +9,11 @@
     <div class="pic">
     </div>
     <h1>jeojepojeopjpoejopejopejpoej</h1>
-      <h1 class="name">Name: {{(userToDisplay | async)?.name}}</h1>
-      <h2 class="location">{{(userToDisplay | async)?.location}}</h2>
-      <h3 class="email">{{(userToDisplay | async)?.userEmail}}</h3>
-<ul class="project-list" *ngFor="let project of projects">
-  <li class="project">{{(projectsToDisplay | async)?.title}}</li>
+      <h1 class="name">Name: {{userToDisplay?.name}}</h1>
+      <h2 class="location">{{userToDisplay?.location}}</h2>
+      <h3 class="email">{{userToDisplay?.userEmail}}</h3>
+<ul class="project-list" *ngFor="let project of projectsToDisplay">
+  <li class="project">{{project?.title}}</li>
 </ul>
 
   </div>
