--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,9 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer">
+  <!-- <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div> -->
+</footer>
