Add 1ms timeout to page load of project

--- a/src/app/user-project/user-project.component.html
+++ b/src/app/user-project/user-project.component.html
@@ -1,1 +1,1 @@
-<li><a (click)="goToProjectDetail(projectToDisplay.key)">{{projectToDisplay?.title}}</a></li>
+<li><a (click)="goToProjectDetail()">{{projectToDisplay?.title}}</a></li>
