--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -1,37 +1,36 @@
-<p>
-  edit-user works!
-</p>
+
 <h3>Add New User to Group</h3>
 <div class="form-group">
   <div>
     <label for="name">Name:</label>
       <br>
-      <input class ="form-control" type="text" name="name"  #newName>
+      <input [(ngModel)]="selectedUser.name">
   </div>
 
   <div>
     <label for="location">Location:</label>
       <br>
-      <input class ="form-control" type="text" name="location"  #newLocation>
+      <input class ="form-control" type="text" [(ngModel)]="selectedUser.location">
   </div>
 
   <div>
     <label for="email">Email:</label>
       <br>
-      <input class ="form-control" type="text" name="email"  #newEmail>
+      <input class ="form-control" type="text" [(ngModel)]="selectedUser.userEmail">
   </div>
 
   <div>
     <label for="image">Upload image:</label>
       <br>
-      <input class ="form-control" type="text" name="image"  #newImage>
+      <input class ="form-control" type="text" [(ngModel)]="selectedUser.userImage">
   </div>
-
+<br>
   <div>
+    // This needs to be changed - mehod which loads this user's projects on Init./////
     <label for="project-list">List of Projects:</label>
       <br>
-      <input class ="form-control" type="text" name="project-list"  #newProjectList>
+      <input class ="form-control" type="text" [(ngModel)]="selectedUser.projectList">
   </div>
-
-  <button (click)= "submitForm(newName.value, newLocation.value, newEmail.value, newImage.value, newProjectList.value);newName.value=''; newLocation.value=''; newEmail.value= '';newImage.value='';newProjectList.value=''"></button>
+ <br>
+  <button class = "btn btn-success" (click)="beginUpdatingUser(selectedUser)">Update</button>
 </div>
