--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -4,9 +4,12 @@
     <h3>{{owner?.name}}</h3>
     <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{owner?.location}}</p>
   </div>
-  <div class="social-media-box" *ngIf="project.socialMedia != null">
+  <div class="social-media-box row" *ngIf="project.socialMedia != null">
     <div *ngFor="let sm of project.socialMedia" class="social-media">
       <h5><i [class]="getType(sm)" aria-hidden="true"></i><a href="{{sm.mediaAddress}}"> {{sm.mediaAddress}}</a></h5>
     </div>
+  </div>
+  <div class="tweetbox">
+    <!-- <app-twitter-timeline [twitterHandle] ="getTwitterHandle()"></app-twitter-timeline> -->
   </div>
 </div>
