add delete function for the user and navigate back to home page

--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -33,4 +33,7 @@
   </div>
  <br>
   <button class = "btn btn-success" (click)="beginUpdatingUser(selectedUser)">Update</button>
+  <br>
+  <br>
+  <button class = "btn btn-danger" (click)="beginDeletingUser(selectedUser)">Delete</button>
 </div>
