--- a/src/app/new-project/new-project.component.html
+++ b/src/app/new-project/new-project.component.html
@@ -6,7 +6,7 @@
 <input class="form-control" type="text" name="image" placeholder="Featured Image" #newImage>
 </div>
 <div class="form-group">
-<div [froalaEditor] placeholder="Description" [(froalaModel)]="newDescription"></div>
+<div [froalaEditor]='options' placeholder="Description" [(froalaModel)]="newDescription"></div>
 </div>
 <div class="form-group">
 <input class="form-control" type="text" name="website" placeholder="Website URL" #newWebsite>
