Add needs to project - still have to display successfully and load into FB

--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -8,4 +8,4 @@
     <app-side-bar [project]="projectToDisplay" [owner]="user"></app-side-bar>
   </div>
 </div>
-<app-need></app-need>
+<app-need [selectedProjectKey]='projectToDisplay?.$key'></app-need>
