--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
 
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a (click)= "showSignup=true">Signup</a></li>
+      <li *ngIf="!isLoggedIn"><a (click)= "showSignup=true">Signup</a></li>
       <li><a routerLink="new-project">New Project</a></li>
       <li><a routerLink="about">About</a></li>
+      <li *ngIf="isLoggedIn">Welcome, {{afService.displayName}}</li>
       <li *ngIf="!isLoggedIn"><a (click)="showLogin = true">Login</a></li>
       <li *ngIf="isLoggedIn"><a (click)="logout()">Logout</a></li>
-      <a class="navbar-brand" routerLink="contact">Contact Us</a>
 
     </ul>
   </div>
