--- a/src/app/complete-profile/complete-profile.component.html
+++ b/src/app/complete-profile/complete-profile.component.html
@@ -1,30 +1,12 @@
-
 <h3>Complete your profile</h3>
-<div class="form-group">
-  <div>
-    <label for="name">Name:</label>
-      <br>
-      <input [(ngModel)]="currentUser.name">
-  </div>
+<div class="">
+  <input class="form-control" [(ngModel)]="currentUser.name">
 
-  <!-- <div>
-    <label for="location">Location:</label>
-      <br>
-      <input class ="form-control" type="text" [(ngModel)]="selectedUser.location">
-  </div>
+  <input class="form-control" type="text" name="location" placeholder="Location" #newLocation>
 
-  <div>
-    <label for="email">Email:</label>
-      <br>
-      <input class ="form-control" type="text" [(ngModel)]="selectedUser.userEmail">
-  </div>
+  <input class="form-control" type="text" name="about" placeholder="About Me" #newAbout>
 
-  <div>
-    <label for="image">Upload image:</label>
-      <br>
-      <input class ="form-control" type="text" [(ngModel)]="selectedUser.userImage">
-  </div>
-<br>
-  <button class = "btn btn-success" (click)="beginUpdatingUser(selectedUser)">Save</button>
-  <br> -->
+  <input class="form-control" type="text" name="image" placeholder="Image URL" #newImage>
+
+  <button type="button" (click)="saveProfile(newLocation.value, newAbout.value, newImage.value)">Save</button>
 </div>
