add working code

--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -47,6 +47,6 @@
       <i class="fa fa-plus-square fa-lg" aria-hidden="true"></i>
     </span>
   </div>
-  <button type="button" class="btn btn-success" (click)="showProjectEditForm = false; submitEdit(projectToEdit, projectToEdit)">Submit</button>
+  <button type="button" class="btn btn-success" (click)="showProjectEditForm = false; submitEdit(projectToEdit)">Submit</button>
   <button type="button" name="button" class="btn btn-warning" (click)="reload()">Cancel</button>
 </div>
