--- a/src/app/edit-project/edit-project.component.scss
+++ b/src/app/edit-project/edit-project.component.scss
@@ -3,6 +3,8 @@
   position: fixed;
   top: 10vh;
   left: 25vw;
+  max-height:80vh;
+  overflow:scroll;
   width: 50vw;
   background-color: white;
   box-shadow: 0px 5px 10px #888888;
