--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,7 +1,7 @@
 <div class="project-detail-box row">
   <div class="main-project col-md-8">
     <h2>{{projectToDisplay?.title}}</h2>
-    <app-edit-project [projectToEdit]='projectToDisplay'></app-edit-project>
+    <app-edit-project [projectToEdit]='projectToDisplay' [projectId]='projectId'></app-edit-project>
     <button type="button" class="btn btn-danger btn-sm" name="button" (click)="deleteProject(projectToDisplay)">Delete</button>
     <img *ngIf="projectToDisplay" [src]="projectToDisplay?.image" alt="projectToDisplay?.title" />
     <p [innerHTML]="projectToDisplay?.description"></p>
@@ -10,4 +10,4 @@
     <app-side-bar [project]="projectToDisplay" [owner]="user"></app-side-bar>
   </div>
 </div>
-<app-need [selectedProjectKey]='projectToDisplay?.$key'></app-need>
+<app-need [selectedProjectKey]="projectId"></app-need>
