--- a/src/app/new-project/new-project.component.html
+++ b/src/app/new-project/new-project.component.html
@@ -11,23 +11,5 @@
 <div class="form-group">
 <input class="form-control" type="text" name="website" placeholder="Website URL" #newWebsite>
 </div>
-<div class="form-group">
-  <h3>Social Media</h3>
-  <h4 *ngFor = 'let socialmedia of socialMedia'>{{socialmedia.mediaType}}: {{socialmedia.mediaAccount}}</h4>
-  <label>Choose social media</label>
-  <select (change)="onChange($event.target.value)">
-    <option value="">Select social media</option>
-    <option value="Facebook">Facebook</option>
-    <option value="LinkedIn">LinkedIn</option>
-    <option value="Twitter">Twitter</option>
-    <option value="Instagram">Instagram</option>
-  </select>
-  <label *ngIf="socialMediaString=='Facebook' || socialMediaString=='Twitter' || socialMediaString=='Instagram'">Input username</label>
-
-  <label *ngIf="socialMediaString=='LinkedIn' ">Input url</label>
-  <input *ngIf="socialMediaString != ''" type="text" name="name" [(ngModel)]="newAccount">
-  <span *ngIf="newAccount" (click)="addNewSocialMedia()">
-    <i class="fa fa-plus-square fa-lg" aria-hidden="true"></i>
-  </span>
-</div>
+<app-social-media (addClicked)="setSocialMedia($event)"></app-social-media>
 <button class="btn btn-info" (click)="createNewProject(newTitle.value, newImage.value, newDescription, newWebsite.value); newTitle.value=''; newImage.value='';newDescription='';newWebsite.value='';">Propose</button>
