--- a/src/app/social-media/social-media.component.html
+++ b/src/app/social-media/social-media.component.html
@@ -1,9 +1,19 @@
 <div class="form-group">
   <h3>Social Media</h3>
-  <div *ngIf="socialMedia">
-    <h4 *ngFor = 'let socialmedia of socialMedia'>{{socialmedia.mediaType}}: {{socialmedia.mediaAccount}}</h4>
+  <div *ngIf="!editSocialMediaForm">
+    <div *ngFor = 'let socialmedia of socialMedia' >
+      <h4>{{socialmedia.mediaType}}: {{socialmedia.mediaAccount}} <i class="fa fa-pencil" aria-hidden="true" (click)="editSocialMedia(socialmedia)"></i><i class="fa fa-times" aria-hidden="true" (click)="deleteSocialMedia(socialmedia)"></i>
+      </h4>
+    </div>
   </div>
-  <label>Choose social media</label>
+  <div *ngIf = "editSocialMediaForm">
+    <h4>{{currentEditMedia.mediaType}}: </h4>
+    <label *ngIf="currentEditMedia.mediaType=='Facebook' || currentEditMedia.mediaType=='Twitter' || currentEditMedia.mediaType=='Instagram'">Input username</label>
+    <label *ngIf="currentEditMedia.mediaType=='LinkedIn' ">Input url</label>
+    <input *ngIf="currentEditMedia.mediaType != ''" type="text" name="name" [(ngModel)]="currentEditMedia.mediaAccount">
+    <button type="button" name="button" (click)="confirmEditSocialMedia()">Confirm</button>
+  </div>
+  <label>Add New social media</label>
   <select (change)="onChange($event.target.value)">
     <option value="">Select social media</option>
     <option value="Facebook">Facebook</option>
