--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -10,4 +10,6 @@
     <app-side-bar [project]="projectToDisplay" [owner]="user"></app-side-bar>
   </div>
 </div>
+
+<h2>here is the needs list</h2>
 <app-need [selectedProjectKey]="projectId"></app-need>
