--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,29 @@
-<p>
-  contact works!
-</p>
+<div class="form-group">
+  <h3>Contact Info</h3>
+  <div *ngIf="!editContactForm">
+    <div *ngFor = 'let contact of contacts' >
+      <h4>{{contact.contactType}}: {{contact.contactDetail}} <i class="fa fa-pencil" aria-hidden="true" (click)="editContact(contact)"></i><i class="fa fa-times" aria-hidden="true" (click)="deleteContact(contact)"></i>
+      </h4>
+    </div>
+  </div>
+  <div *ngIf = "editContactForm">
+    <h4>{{currentEditContact.contactType}}: </h4>
+    <label *ngIf="currentEditContact.contactType=='Email'">Input email</label>
+    <label *ngIf="currentEditContact.contactType=='Phone' ">Input number</label>
+    <input *ngIf="currentEditContact.contactType != ''" type="text" name="name" [(ngModel)]="currentEditContact.contactDetail">
+    <button type="button" name="button" (click)="confirmEditContact()">Confirm</button>
+  </div>
+  <label>Add New Contact Info</label>
+  <select (change)="onChange($event.target.value)">
+    <option value="">Select contact type</option>
+    <option value="Facebook">Phone</option>
+    <option value="LinkedIn">Email</option>
+  </select>
+  <label *ngIf="contactString=='Email'">Input email</label>
+
+  <label *ngIf="contactString=='Phone' ">Input number</label>
+  <input *ngIf="contactString != ''" type="text" name="name" [(ngModel)]="newDetail">
+  <span *ngIf="newDetail" (click)="addNewContact()">
+    <i class="fa fa-plus-square fa-lg" aria-hidden="true"></i>
+  </span>
+</div>
