--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -4,7 +4,7 @@
   <div>
     <label for="name">Name:</label>
       <br>
-      <input [(ngModel)]="selectedUser.name">
+      <input [(ngModel)]="selectedUser.displayName">
   </div>
 
   <div>
