--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -12,7 +12,7 @@
 
       <h1 class="name">{{userToDisplay?.name}}</h1>
       <h4 class="location">{{userToDisplay?.location}}</h4>
-      <h4 class="email"><em>{{userToDisplay?.userEmail}}</em></h4>
+      <h4 class="email"><em>{{userToDisplay?.email}}</em></h4>
     </div>
     <div class="col-sm-1">
     </div>
@@ -24,9 +24,8 @@
   </div>
   <div class="row">
     <div class="col-sm-5">
-      <app-edit-user [selectedUser]="userToDisplay"></app-edit-user>
+      <!-- <app-edit-user [selectedUser]="userToDisplay"></app-edit-user> -->
     </div>
   </div>
 
-<!--ending container div -->
 </div>
