--- a/src/app/new-project/new-project.component.html
+++ b/src/app/new-project/new-project.component.html
@@ -11,5 +11,6 @@
 <div class="form-group">
 <input class="form-control" type="text" name="website" placeholder="Website URL" #newWebsite>
 </div>
-<app-social-media (addClicked)="setSocialMedia($event)"></app-social-media>
+<app-social-media (addClicked)="setSocialMedia($event)" [socialMedia]="socialMedia"></app-social-media>
+<app-contact (addClicked)="setContact($event)" [contacts]="contacts"></app-contact>
 <button class="btn btn-info" (click)="createNewProject(newTitle.value, newImage.value, newDescription, newWebsite.value); newTitle.value=''; newImage.value='';newDescription='';newWebsite.value='';">Propose</button>
