Need update try - readme start

--- a/src/app/need/need.component.html
+++ b/src/app/need/need.component.html
@@ -3,6 +3,7 @@
     <h4 (click)="setSelection(need)">{{need.title}}</h4>
     <h4 (click)="setSelection(need)">{{need.type}}</h4>
     <h5 (click)="setSelection(need)">{{need.description}}</h5>
+    <h5 (click)="setSelection(need)">{{need.key}}</h5>
     <br>
   </div>
   <app-edit-need *ngIf="editArea" [selectedNeed]="selectedNeed"></app-edit-need>
