--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,19 @@
+
+<h2>About Us</h2>
+<h3>Our mission</h3>
 <p>
-  about works!
+   Our mission is to help bring people together and share their creative ideas and assist them in bringing their dreams to life.
 </p>
+
+<h3> StartPup is just for creative projects.</h3>
+<ul>
+  <li>We provide platform that’s fully dedicated to building community around creative projects.</li>
+  <li>We help you get enough funds to realize your project.</li>
+  <li>We also allow our users to connect with your community through social media networking.</li>
+</ul>
+
+<br>
+<br>
+<blockquote>
+  "Creativity is Contagious. PASS IT ON."
+</blockquote>
