--- a/src/app/edit-need/edit-need.component.html
+++ b/src/app/edit-need/edit-need.component.html
@@ -22,6 +22,6 @@
   <label>New Need Description:</label>
   <input [(ngModel)]="selectedNeed.description">
 </div>
-<button class= "btn btn-primary" (click)="finishedEditNeed(selectedNeed)">Update</button>
+<button class= "btn btn-primary" (click)="finishedEditNeed()">Update</button>
 </div>
   <br>
