--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-3 pro-info">
 
-      <img src="{{userToDisplay?.userImage}}" alt="{{userToDisplay?.name}}" />
+      <!-- <img src="{{userToDisplay?.userImage}}" alt="{{userToDisplay?.name}}" /> -->
 
       <h1 class="name">{{userToDisplay?.name}}</h1>
       <h4 class="location">{{userToDisplay?.location}}</h4>
