--- a/src/app/twitter-timeline/twitter-timeline.component.html
+++ b/src/app/twitter-timeline/twitter-timeline.component.html
@@ -1,7 +1,6 @@
-<!-- <div id="twitter-timeline">
+<div id="twitter-timeline">
   {{twitterHandle}}
-
-</div> -->
+</div>
 
 <a class="twitter-timeline"
   [href]="getTwitterUrl(twitterHandle)">
