--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,12 +1,12 @@
 <div class="side-bar-box">
   <div class="owner-box row">
-  <img [src]="owner?.userImage" alt="owner?.name" />
+  <img [src]="owner?.image" alt="owner?.name" />
     <h3>{{owner?.name}}</h3>
     <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{owner?.location}}</p>
   </div>
-  <div class="social-media-box row" *ngIf="project.socialMedia != null">
+  <div class="social-media-box row" *ngIf="project.socialMedia">
     <div *ngFor="let sm of project.socialMedia" class="social-media">
-      <h5><i [class]="getType(sm)" aria-hidden="true"></i><a href="{{sm.mediaAddress}}"> {{sm.mediaAddress}}</a></h5>
+      <h5><i [class]="getType(sm)" aria-hidden="true"></i><a href="{{sm.mediaAccount}}">{{sm.mediaAccount}}</a></h5>
     </div>
   </div>
   <div class="tweetbox">
