--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -11,7 +11,7 @@
     <div class="col-sm-1">
     </div>
     <div class="col-sm-8">
-      <ul class="project-list" *ngFor="let projectKey of userToDisplay?.projects">
+      <ul class="project-list" *ngFor="let projectKey of userToDisplay?.projects | keys">
         <app-user-project [projectKey]="projectKey"></app-user-project>
       </ul>
     </div>
