Show projects on usr page

--- a/src/app/user-project/user-project.component.html
+++ b/src/app/user-project/user-project.component.html
@@ -1,1 +1,1 @@
-<li><a (click)="goToProjectDetail()">I WORK: {{projectToDisplay?.title}}</a></li>
+<li><a (click)="goToProjectDetail()">I WORK: {{projectToDisplay.title}}</a></li>
