--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -11,6 +11,6 @@
   </div>
 </div>
 <app-add-need [selectedProjectKey]="projectId"></app-add-need>
-<div class="needs-list">
+<!-- <div class="needs-list">
   <app-need *ngFor="let need of projectToDisplay.needs" [selectedProjectKey]="projectId" [need]="need"></app-need>
-</div>
+</div> -->
